project 1: added links to screenshots

--- a/morea/03.strings/project1.html
+++ b/morea/03.strings/project1.html
@@ -68,13 +68,13 @@
 
 <ol>
   <li>In PyCharm, create a new project with the name <code>project1_uLogin</code>, where you replace “<code>uLogin</code>” with the beginning of your Drew e-mail address before the <code>@</code> symbol:
- a. Go to <code>File &gt; New Project</code>:<br /><img src="project1/NewProject.png" width="300" />
-    <ol>
-      <li>Name the project:<br /><img src="project1/NameProject.png" width="400" /></li>
-      <li>I recommend opening the project in a new window for now:<br /><img src="project1/OpenProject.png" width="200" /></li>
-    </ol>
+    <ul>
+      <li>Go to <code>File &gt; New Project</code>:<br /><a href="project1/NewProject.png"><img src="project1/NewProject.png" width="300" /></a></li>
+      <li>Name the project:<br /><a href="project1/NameProject.png"><img src="project1/NameProject.png" width="400" /></a></li>
+      <li>I recommend opening the project in a new window for now:<br /><a href="project1/OpenProject.png"><img src="project1/OpenProject.png" width="200" /></a></li>
+    </ul>
   </li>
-  <li>Create 4 python files: <code>bye.py</code>, <code>convert.py</code>, <code>fun.py</code>, and <code>string.py</code>. To create a file, right-click on the project and select <code>New &gt; Python File</code>: <br /><img src="project1/NewFile.png" width="300" /></li>
+  <li>Create 4 python files: <code>bye.py</code>, <code>convert.py</code>, <code>fun.py</code>, and <code>string.py</code>. To create a file, right-click on the project and select <code>New &gt; Python File</code>: <br /><a href="project1/NewFile.png"><img src="project1/NewFile.png" width="300" /></a></li>
 </ol>
 
 <!--  * `mkdir project1_uLogin1_uLogin2`
@@ -191,11 +191,16 @@
 <p>Once you’re satisfied that your programs are working correctly, zip it for submission:</p>
 
 <ul>
-  <li>Locate your project on your computer’s hard drive. PyCharm can help:<br /><img src="project1/reveal.png" width="400" /></li>
+  <li>Locate your project on your computer’s hard drive. PyCharm can help:
+    <ul>
+      <li><strong>on windows:</strong><br /><a href="project1/explorer.png"><img src="project1/explorer.png" width="400" /></a></li>
+      <li><strong>on mac:</strong><br /><a href="project1/reveal.png"><img src="project1/reveal.png" width="400" /></a></li>
+    </ul>
+  </li>
   <li>Right-click on your project folder &amp; create a zip file
     <ul>
-      <li><strong>on windows:</strong><br /><img src="project1/Compress.jpeg" width="300" /></li>
-      <li><strong>on mac:</strong><br /><img src="project1/Compress.png" width="300" /></li>
+      <li><strong>on windows:</strong><br /><a href="project1/Compress.jpeg"><img src="project1/Compress.jpeg" width="300" /></a></li>
+      <li><strong>on mac:</strong><br /><a href="project1/Compress.png"><img src="project1/Compress.png" width="300" /></a></li>
     </ul>
   </li>
   <li>Make sure to name your zip file <code>project1_uLogin1.zip</code></li>
@@ -216,7 +221,7 @@
 
     
     <p style="margin: 0">Powered by the <a href="http://morea-framework.github.io/">Morea Framework</a> (Theme: spacelab)<br>
-       Last update on: <span>2016-02-08 11:40:29 -0500</span></p>
+       Last update on: <span>2016-02-08 11:45:10 -0500</span></p>
     <p style="margin: 0">
       12 modules
       
