--- a/morea/03.strings/project1.html
+++ b/morea/03.strings/project1.html
@@ -208,6 +208,11 @@
 
 <p>Upload your zip file to Google Classroom.</p>
 
+<h2 id="hints">Hints</h2>
+<ul>
+  <li>Gave your project or file the wrong name? Right-click on it &amp; go to <code>Refactor &gt; Rename</code></li>
+</ul>
+
 </div>
 
 
@@ -221,7 +226,7 @@
 
     
     <p style="margin: 0">Powered by the <a href="http://morea-framework.github.io/">Morea Framework</a> (Theme: spacelab)<br>
-       Last update on: <span>2016-02-08 11:45:10 -0500</span></p>
+       Last update on: <span>2016-02-08 12:54:41 -0500</span></p>
     <p style="margin: 0">
       12 modules
       
