--- a/morea/04.flow/phw5.html
+++ b/morea/04.flow/phw5.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title> PHW5 | CSCI 150 </title>
+  <title> HW | CSCI 150 </title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8">
 
@@ -54,9 +54,9 @@
 
 
 <div class="container">
-  <h1 id="practice-hw5-for-loops">Practice HW5: For loops</h1>
+  <h1 id="hw-for-loops--lists">HW: For loops &amp; lists</h1>
 
-<p>In this practice HW you will create 2 programs that use for loops.</p>
+<p>In this HW you will create 2 programs that use for loops &amp; lists.</p>
 
 <p><span class="h4">
   <span style="padding: 2px" class="label label-success">Rx: &lt;15 min</span>
@@ -73,40 +73,40 @@
   <li>Print the numbers from 1 to 10 (inclusive). Each number should be on a separate line.</li>
   <li>Print the multiples of 5 from 10 through -25 (inclusive) on the same line. The numbers should each be separated by a space. (<em>Hint</em>: use the <code>end</code> parameter to the print function like we did in class; see loop_fun.py.) Don’t forget to print a newline after this loop by calling <code>print()</code> with no parameters.</li>
   <li>Print the multiples of 3 from -3 to 21 (inclusive). Each number should be separated by a comma and a space. There should not be a comma after the final number (21). </li>
+  <li>Create a list of 5 book titles. Write python code to print <code>"I would like to read"</code> followed by the 5 book titles. Each title should be quoted.</li>
 </ol>
 
 <h2 id="averagepy">average.py</h2>
 
-<p>Create a program that calculates the average of a series of 10 real (i.e., decimal) numbers entered by the user. Make sure you ask (i.e., prompt) the user to enter each number (the user will hit enter after each number). Note you will need two numbers to calculate the average: the sum and the number of numbers entered by the user (10).</p>
+<p>Create a program that calculates the average of 10 real (i.e., decimal) numbers entered by the user. Make sure you ask (i.e., prompt) the user to enter each number (the user will hit enter after each number). <!--Note you will need two numbers to calculate the average: the sum and the number of numbers entered by the user (10).--></p>
 
-<h2 id="demonstration">Demonstration</h2>
+<!--## Demonstration
 
-<p>Once you’ve finished doing the HW a single time, you can watch me do it:</p>
+
+Once you've finished doing the HW a single time, you can watch me do it:
 
 <div class="video-container">
-  <iframe src="http://www.youtube.com/embed/lexkpbllvT0" frameborder="0" allowfullscreen=""></iframe>
+  <iframe  src="http://www.youtube.com/embed/lexkpbllvT0" frameborder="0" allowfullscreen></iframe>
 </div>
 
-<h2 id="standard-practice-hw-caveats">Standard Practice HW Caveats</h2>
+## Standard Practice HW Caveats
 
-<p>You’ll learn significantly less from watching me solve the
-HW if you haven’t attempted the HW yourself first.</p>
+You’ll learn significantly less from watching me solve the
+HW if you haven’t attempted the HW yourself first.
 
-<p>While it’s an achievement to finish the HW no matter how long it takes, you
-might experience “diminishing returns” if you work longer than the DNF (Did Not Finish)
+While it's an achievement to finish the HW no matter how long it takes, you
+might experience "diminishing returns" if you work longer than the DNF (Did Not Finish)
 time. Thus, it might be strategic to stop working at the DNF time and watch
-my solution.</p>
+my solution.
 
-<p>After watching my solution, I recommend that you repeat the HW if you
-have not achieved at least Av (Average) performance. If so, be sure to:</p>
+After watching my solution, I recommend that you repeat the HW if you
+have not achieved at least Av (Average) performance. If so, be sure to:
 
-<ul>
-  <li>Delete your old project so you cannot refer to it;</li>
-  <li>Don’t look at my screencast while you HW; and</li>
-  <li>Reset your timer.</li>
-</ul>
+  * Delete your old project so you cannot refer to it;
+  * Don’t look at my screencast while you HW; and
+  * Reset your timer.
 
-<p>Feel free to keep trying until you make Rx if that’s of interest to you.</p>
+Feel free to keep trying until you make Rx if that’s of interest to you.-->
 
 </div>
 
@@ -121,7 +121,7 @@ have not achieved at least Av (Average) performance. If so, be sure to:</p>
 
     
     <p style="margin: 0">Powered by the <a href="http://morea-framework.github.io/">Morea Framework</a> (Theme: spacelab)<br>
-       Last update on: <span>2016-02-08 12:54:41 -0500</span></p>
+       Last update on: <span>2016-02-12 13:38:06 -0500</span></p>
     <p style="margin: 0">
       12 modules
       
