--- a/morea/05.functions/phw4.html
+++ b/morea/05.functions/phw4.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title> WOD4: Functions | CSCI 150 </title>
+  <title> HW | CSCI 150 </title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8">
 
@@ -54,7 +54,7 @@
 
 
 <div class="container">
-  <h1 id="wod4-functions">WOD4: Functions</h1>
+  <h1 id="hw-functions">HW: Functions</h1>
 
 <p><span class="h4">
   <span style="padding: 2px" class="label label-success">Rx: &lt;5 min</span>
@@ -62,16 +62,6 @@
   <span style="padding: 2px" class="label label-warning">Sd: 10-20 min</span>
   <span style="padding: 2px" class="label label-danger">DNF: 20+ min</span>
 </span></p>
-
-<h3 id="setup">Setup</h3>
-
-<ul>
-  <li><code>mkdir wod4_uLogin</code></li>
-  <li><code>cd wod4_uLogin</code></li>
-  <li><code>touch is_odd.py square.py</code></li>
-</ul>
-
-<p><em>Don’t forget to add a comment at the top of the program with your name and what the program does.</em></p>
 
 <h2 id="isoddpy">is_odd.py</h2>
 
@@ -90,12 +80,7 @@
 
 <h3 id="submission">Submission</h3>
 
-<p>Once you’re satisfied that your programs are working correctly, zip it for submission:</p>
-
-<ul>
-  <li><code>cd ..</code></li>
-  <li><code>zip wod4_uLogin.zip wod4_uLogin/*</code></li>
-</ul>
+<p>Once you’re satisfied that your programs are working correctly, take a screenshot of each program open in the editor, with its output displayed in the console, and submit to google classroom. You should submit 2 screenshots.</p>
 
 <!-- Started @ 11:35 -->
 
@@ -112,7 +97,7 @@
 
     
     <p style="margin: 0">Powered by the <a href="http://morea-framework.github.io/">Morea Framework</a> (Theme: spacelab)<br>
-       Last update on: <span>2016-02-12 13:38:06 -0500</span></p>
+       Last update on: <span>2016-02-22 11:46:17 -0500</span></p>
     <p style="margin: 0">
       12 modules
       
