function hw update

--- a/morea/05.functions/phw4.html
+++ b/morea/05.functions/phw4.html
@@ -129,7 +129,7 @@ Write a function `is_odd` that takes a number as a parameter and returns true if
 
 <h2 id="rectanglepy">rectangle.py</h2>
 
-<p>Create a program that draws a filled rectangle of asterix characters, <strong>requesting the width and height from the user</strong>. Write a function <code>rectangle</code> that takes the width &amp; height as parameters and prints a filled square.</p>
+<p>Create a program that draws a filled rectangle of asterix characters, <strong>requesting the width and height from the user</strong>. Write a function <code>rectangle</code> that takes the width &amp; height as parameters and prints a filled rectangle.</p>
 
 <p>For example, a call to <code>rectangle(3,5)</code> should output:</p>
 
@@ -159,7 +159,7 @@ Write a function `is_odd` that takes a number as a parameter and returns true if
 
     
     <p style="margin: 0">Powered by the <a href="http://morea-framework.github.io/">Morea Framework</a> (Theme: spacelab)<br>
-       Last update on: <span>2016-02-22 11:50:14 -0500</span></p>
+       Last update on: <span>2016-02-24 12:33:55 -0500</span></p>
     <p style="margin: 0">
       12 modules
       
