--- a/morea/06.turtles/project2.html
+++ b/morea/06.turtles/project2.html
@@ -83,7 +83,8 @@
 
 <!--Create a folder `project2-uLogin1_uLogin2`, replacing the uLogins with the e-mail ids of you and your partner. 
 -->
-<p>## Part 1: Learn how to work with turtles</p>
+
+<h2 id="part-1-learn-how-to-work-with-turtles">Part 1: Learn how to work with turtles</h2>
 
 <h3 id="draw-a-line">1. Draw a line</h3>
 
@@ -299,7 +300,7 @@ tree(200, 45)
 
     
     <p style="margin: 0">Powered by the <a href="http://morea-framework.github.io/">Morea Framework</a> (Theme: spacelab)<br>
-       Last update on: <span>2016-02-25 16:01:53 -0500</span></p>
+       Last update on: <span>2016-02-26 11:53:24 -0500</span></p>
     <p style="margin: 0">
       12 modules
       
