--- a/morea/05.functions/phw7.html
+++ b/morea/05.functions/phw7.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title> PHW7 | CSCI 150 </title>
+  <title> HW | CSCI 150 </title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8">
 
@@ -54,7 +54,7 @@
 
 
 <div class="container">
-  <h1 id="practice-hw7-recursion">Practice HW7: Recursion</h1>
+  <h1 id="hw-recursion">HW: Recursion</h1>
 
 <!--In this practice HW you will create 2 programs that take code we've previously written for other PHWs and turn them into functions.-->
 
@@ -98,40 +98,41 @@ s!
 
 <p>For extra practice, try writing <code>text_steps</code> using a loop instead of recursion.</p>
 
-<h2 id="demonstration">Demonstration</h2>
+<!--## Demonstration
 
-<p>Once you’ve finished doing the HW a single time, you can watch me do it:</p>
+Once you've finished doing the HW a single time, you can watch me do it:
 
 <div class="video-container">
-  <iframe src="http://www.youtube.com/embed/nTb-SeIGMCM" frameborder="0" allowfullscreen=""></iframe>
+  <iframe  src="http://www.youtube.com/embed/nTb-SeIGMCM" frameborder="0" allowfullscreen></iframe>
 </div>
 
-<h3 id="solution-for-textsteps-loop">Solution for <code>text_steps</code> loop:</h3>
-<pre><code>def step_loop(txt):
-    for i in range(len(txt)):
-	    print(txt[i:])
-</code></pre>
+### Solution for `text_steps` loop:
+    def step_loop(txt):
+	    for i in range(len(txt)):
+		    print(txt[i:])
 
-<h2 id="standard-practice-hw-caveats">Standard Practice HW Caveats</h2>
+## Standard Practice HW Caveats
 
-<p>You’ll learn significantly less from watching me solve the
-HW if you haven’t attempted the HW yourself first.</p>
+You’ll learn significantly less from watching me solve the
+HW if you haven’t attempted the HW yourself first.
 
-<p>While it’s an achievement to finish the HW no matter how long it takes, you
-might experience “diminishing returns” if you work longer than the DNF (Did Not Finish)
+While it's an achievement to finish the HW no matter how long it takes, you
+might experience "diminishing returns" if you work longer than the DNF (Did Not Finish)
 time. Thus, it might be strategic to stop working at the DNF time and watch
-my solution.</p>
+my solution.
 
-<p>After watching my solution, I recommend that you repeat the HW if you
-have not achieved at least Av (Average) performance. If so, be sure to:</p>
+After watching my solution, I recommend that you repeat the HW if you
+have not achieved at least Av (Average) performance. If so, be sure to:
 
-<ul>
-  <li>Delete your old project so you cannot refer to it;</li>
-  <li>Don’t look at my screencast while you HW; and</li>
-  <li>Reset your timer.</li>
-</ul>
+  * Delete your old project so you cannot refer to it;
+  * Don’t look at my screencast while you HW; and
+  * Reset your timer.
 
-<p>Feel free to keep trying until you make Rx if that’s of interest to you.</p>
+Feel free to keep trying until you make Rx if that’s of interest to you.-->
+
+<h3 id="submission">Submission</h3>
+
+<p>Once you’re satisfied that your programs are working correctly, take a screenshot of each program open in the editor, with its output displayed in the console, and submit to google classroom. You should submit 2 screenshots.</p>
 
 </div>
 
@@ -146,7 +147,7 @@ have not achieved at least Av (Average) performance. If so, be sure to:</p>
 
     
     <p style="margin: 0">Powered by the <a href="http://morea-framework.github.io/">Morea Framework</a> (Theme: spacelab)<br>
-       Last update on: <span>2016-02-26 11:53:24 -0500</span></p>
+       Last update on: <span>2016-03-14 11:47:39 -0400</span></p>
     <p style="margin: 0">
       12 modules
       
