recursion II hw

--- a/morea/05.functions/phw7.html
+++ b/morea/05.functions/phw7.html
@@ -54,7 +54,7 @@
 
 
 <div class="container">
-  <h1 id="hw-recursion">HW: Recursion</h1>
+  <h1 id="hw-recursion-i">HW: Recursion I</h1>
 
 <!--In this practice HW you will create 2 programs that take code we've previously written for other PHWs and turn them into functions.-->
 
@@ -67,9 +67,9 @@
 
 <h2 id="powerpy">power.py</h2>
 
-<p>Write a function <code>power</code> which takes two numbers (<code>base</code> amd <code>exponent</code>) as parameters and calculates the value <code>base ** exponent</code> using recursion by repeatedly multiplying <code>base</code>.</p>
+<p>Write a function <code>power</code> which takes two numbers (<code>base</code> and <code>exponent</code>) as parameters and calculates the value <code>base ** exponent</code> using recursion by repeatedly multiplying <code>base</code>.</p>
 
-<p>Next write a function <code>power_loop</code> which takes two numbers (<code>base</code> amd <code>exponent</code>) as parameters and calculates the value <code>base ** exponent</code> using a loop.</p>
+<p>Next write a function <code>power_loop</code> which takes two numbers (<code>base</code> and <code>exponent</code>) as parameters and calculates the value <code>base ** exponent</code> using a loop.</p>
 
 <p>Test that both functions return the same value when called with the same parameters. </p>
 
@@ -147,7 +147,7 @@ Feel free to keep trying until you make Rx if that’s of interest to you.-->
 
     
     <p style="margin: 0">Powered by the <a href="http://morea-framework.github.io/">Morea Framework</a> (Theme: spacelab)<br>
-       Last update on: <span>2016-03-14 11:47:39 -0400</span></p>
+       Last update on: <span>2016-03-16 12:49:25 -0400</span></p>
     <p style="margin: 0">
       12 modules
       
