--- a/morea/07.lists/pwod.html
+++ b/morea/07.lists/pwod.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title> PHW8 | CSCI 150 </title>
+  <title> HW | CSCI 150 </title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8">
 
@@ -54,9 +54,9 @@
 
 
 <div class="container">
-  <h1 id="practice-hw8-recursion--lists">Practice HW8: Recursion &amp; Lists</h1>
+  <h1 id="hw-recursion-ii">HW: Recursion II</h1>
 
-<p>In this practice HW you will create 3 programs that use strings, lists, and recursion.</p>
+<p>In this practice HW you will create 2 programs that use strings, lists, and recursion.</p>
 
 <p><span class="h4">
   <span style="padding: 2px" class="label label-success">Rx: &lt;30 min</span>
@@ -65,17 +65,15 @@
   <span style="padding: 2px" class="label label-danger">DNF: 90+ min</span>
 </span></p>
 
-<h2 id="modepy">mode.py</h2>
+<!--## mode.py
 
-<p>Create a program that calculates the most frequently occurring number in a list of 10 numbers. You may hard-code in a list of numbers rather than getting them as input from the user. You may use the python <a href="https://docs.python.org/3.4/library/statistics.html#statistics.mode">mode</a> function from the statistics package.</p>
+Create a program that calculates the most frequently occurring number in a list of 10 numbers. You may hard-code in a list of numbers rather than getting them as input from the user. You may use the python [mode](https://docs.python.org/3.4/library/statistics.html#statistics.mode) function from the statistics package.
 
-<p><strong><em>Recommended Development Steps:</em></strong></p>
+***Recommended Development Steps:***
 
-<ol>
-  <li>Create a list of 10 numbers and print it out</li>
-  <li>Make sure one number occurs more than any other</li>
-  <li>Print out the <a href="https://docs.python.org/3.4/library/statistics.html#statistics.mode">mode</a> function applied to the list</li>
-</ol>
+1. Create a list of 10 numbers and print it out
+2. Make sure one number occurs more than any other
+2. Print out the [mode](https://docs.python.org/3.4/library/statistics.html#statistics.mode) function applied to the list-->
 
 <h2 id="wheelpy">wheel.py</h2>
 
@@ -135,40 +133,43 @@ w
   <li>Get input from the user</li>
 </ol>
 
-<h2 id="demonstration">Demonstration</h2>
+<!--## Demonstration
 
-<p>Once you’ve finished doing the HW a single time, you can watch me do it. <strong><em>Note</em></strong>, this video includes exercises in a different order:</p>
 
-<div class="video-container">
-  <iframe src="http://www.youtube.com/embed/hsjv5f2DlFk" frameborder="0" allowfullscreen=""></iframe>
-</div>
-
-<p>Recursive solution to pyramid function in <code>text.py</code>:</p>
+Once you've finished doing the HW a single time, you can watch me do it. ***Note***, this video includes exercises in a different order:
 
 <div class="video-container">
-  <iframe src="http://www.youtube.com/embed/yBrjRTtFiTE" frameborder="0" allowfullscreen=""></iframe>
+  <iframe  src="http://www.youtube.com/embed/hsjv5f2DlFk" frameborder="0" allowfullscreen></iframe>
 </div>
 
-<h2 id="standard-practice-hw-caveats">Standard Practice HW Caveats</h2>
+Recursive solution to pyramid function in `text.py`:
 
-<p>You’ll learn significantly less from watching me solve the
-HW if you haven’t attempted the HW yourself first.</p>
+<div class="video-container">
+  <iframe  src="http://www.youtube.com/embed/yBrjRTtFiTE" frameborder="0" allowfullscreen></iframe>
+</div>
 
-<p>While it’s an achievement to finish the HW no matter how long it takes, you
-might experience “diminishing returns” if you work longer than the DNF (Did Not Finish)
+## Standard Practice HW Caveats
+
+You’ll learn significantly less from watching me solve the
+HW if you haven’t attempted the HW yourself first.
+
+While it's an achievement to finish the HW no matter how long it takes, you
+might experience "diminishing returns" if you work longer than the DNF (Did Not Finish)
 time. Thus, it might be strategic to stop working at the DNF time and watch
-my solution.</p>
+my solution.
 
-<p>After watching my solution, I recommend that you repeat the HW if you
-have not achieved at least Av (Average) performance. If so, be sure to:</p>
+After watching my solution, I recommend that you repeat the HW if you
+have not achieved at least Av (Average) performance. If so, be sure to:
 
-<ul>
-  <li>Delete your old project so you cannot refer to it;</li>
-  <li>Don’t look at my screencast while you HW; and</li>
-  <li>Reset your timer.</li>
-</ul>
+  * Delete your old project so you cannot refer to it;
+  * Don’t look at my screencast while you HW; and
+  * Reset your timer.
 
-<p>Feel free to keep trying until you make Rx if that’s of interest to you.</p>
+Feel free to keep trying until you make Rx if that’s of interest to you.-->
+
+<h3 id="submission">Submission</h3>
+
+<p>Once you’re satisfied that your programs are working correctly, take a screenshot of each program open in the editor, with its output displayed in the console, and submit to google classroom. You should submit 2 screenshots.</p>
 
 
 </div>
@@ -184,7 +185,7 @@ have not achieved at least Av (Average) performance. If so, be sure to:</p>
 
     
     <p style="margin: 0">Powered by the <a href="http://morea-framework.github.io/">Morea Framework</a> (Theme: spacelab)<br>
-       Last update on: <span>2016-03-14 11:47:39 -0400</span></p>
+       Last update on: <span>2016-03-16 12:49:25 -0400</span></p>
     <p style="margin: 0">
       12 modules
       
